[project]
name = "scripts"
version = "1.0.0"
description = "Dev utility scripts for personal use."
authors = [{name = "Sergey Pavlov", email = "self@sergeypavlov.dev"}]
requires-python = ">=3.11"
dependencies = [
    "urllib3>=2.0.4",
]

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "ruff>=0.0.279",
]

[tool.pdm.scripts]
lint = {composite = ["black", "isort", "ruff", "mypy --strict"]}

[tool.black]
line-length = 100
quiet = true

[tool.isort]
quiet = true
line_length = 100
multi_line_output = 3
profile = "black"

[tool.ruff]
fix = true
line-length = 100
target-version = "py311"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
