[project]
name = "scripts"
version = "1.0.0"
description = "Dev utility scripts for personal use."
authors = [{name = "Sergey Pavlov", email = "self@sergeypavlov.dev"}]
requires-python = ">=3.12"
dependencies = [
    "urllib3>=2.2.1",
    "pyyaml>=6.0.1",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.8",
    "mypy>=1.10.0",
    "pytest>=8.2.2",
    "types-pyyaml>=6.0.12.20240311",
]

[tool.pdm.scripts]
lint-path = {composite = [
    "ruff format -q",
    "ruff check --fix -q",
    "mypy"
]}
lint = {composite = [
    "lint-path scripts",
    "lint-path tests"
]}
test = "pytest -v tests"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
show-source = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"]
ignore = ["E721"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true
ignore_missing_imports = true
show_error_codes = true
exclude = []
