[project]
name = "scripts"
version = "1.0.0"
description = "Dev utility scripts for personal use."
authors = [{name = "Sergey Pavlov", email = "self@sergeypavlov.dev"}]
requires-python = ">=3.11"
dependencies = [
    "urllib3>=2.0.4",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
types = [
    "types-PyYAML>=6.0.12.11",
]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "ruff>=0.0.282",
    "pytest>=7.4.0",
]

[tool.pdm.scripts]
lint = {composite = ["black", "isort", "ruff", "mypy --strict"]}
test = "pytest -qq"
check = {composite = ["lint lock", "lint requests", "test"]}

[tool.black]
line-length = 100
quiet = true

[tool.isort]
quiet = true
line_length = 100
multi_line_output = 3
profile = "black"

[tool.ruff]
fix = true
line-length = 100
target-version = "py311"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
